infra/k8s/overlays/cluster01/kubernetes.endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kubernetes-external
subsets:
- addresses:
  - ip: 10.152.183.1
  ports:
  - port: 443
    protocol: TCP
