infra/k8s/overlays/cluster01/kubernetes.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
spec:
  clusterIP: 10.152.183.1
  clusterIPs:
  - 10.152.183.1
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 16443
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
