infra/k8s/overlays/cluster01/kubernetes.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - c1.zem.org.uk
      secretName: ingress-k8s-api-tls
  ingressClassName: nginx
  rules:
    - host: "echo.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes
                port:
                  number: 443
